--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Contracts/RickAndMorty.Contracts.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Contracts/RickAndMorty.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E03B5C13-817D-4510-8820-7E1524A61DA7}</ProjectGuid>
+    <ProjectGuid>{6EEC5B7C-82DC-457B-9D9D-98B537E662ED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Implementations</RootNamespace>
-    <AssemblyName>Implementations</AssemblyName>
+    <RootNamespace>RickAndMorty.Contracts</RootNamespace>
+    <AssemblyName>RickAndMorty.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,6 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICharacter.cs" />
+    <Compile Include="IEpisode.cs" />
+    <Compile Include="ILocation.cs" />
+    <Compile Include="IOrigin.cs" />
+    <Compile Include="IRickAndMortyRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
