--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Implementations/RickAndMorty.Implementations.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Implementations/RickAndMorty.Implementations.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F2454BBC-72BC-44A4-A7A6-590E43F3BFCC}</ProjectGuid>
+    <ProjectGuid>{E03B5C13-817D-4510-8820-7E1524A61DA7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Engines</RootNamespace>
-    <AssemblyName>Engines</AssemblyName>
+    <RootNamespace>RickAndMorty.Implementations</RootNamespace>
+    <AssemblyName>RickAndMorty.Implementations</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,6 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RickAndMorty.Contracts\RickAndMorty.Contracts.csproj">
+      <Project>{6eec5b7c-82dc-457b-9d9d-98b537e662ed}</Project>
+      <Name>RickAndMorty.Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
