--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Services/RickAndMorty.Services.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Services/RickAndMorty.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6EEC5B7C-82DC-457B-9D9D-98B537E662ED}</ProjectGuid>
+    <ProjectGuid>{969E7DF8-BBD1-4A04-8C0E-975443DAE57D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Contracts</RootNamespace>
-    <AssemblyName>Contracts</AssemblyName>
+    <RootNamespace>RickAndMorty.Services</RootNamespace>
+    <AssemblyName>RickAndMorty.Services</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,12 +45,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICharacter.cs" />
-    <Compile Include="IEpisode.cs" />
-    <Compile Include="ILocation.cs" />
-    <Compile Include="IOrigin.cs" />
-    <Compile Include="IRickAndMortyRepo.cs" />
+    <Compile Include="API\Character.cs" />
+    <Compile Include="API\Episode.cs" />
+    <Compile Include="API\Info.cs" />
+    <Compile Include="API\Location.cs" />
+    <Compile Include="API\Origin.cs" />
+    <Compile Include="API\Resources.cs" />
+    <Compile Include="API\Results.cs" />
+    <Compile Include="API\RickAndMorty_APIClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="API\RickAndMortyRepo_API.cs" />
+    <Compile Include="Mock\RickAndMortyRepo_Mock.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RickAndMorty.Contracts\RickAndMorty.Contracts.csproj">
+      <Project>{6eec5b7c-82dc-457b-9d9d-98b537e662ed}</Project>
+      <Name>RickAndMorty.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RickAndMorty.Implementations\RickAndMorty.Implementations.csproj">
+      <Project>{e03b5c13-817d-4510-8820-7e1524a61da7}</Project>
+      <Name>RickAndMorty.Implementations</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
