--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMortyTests/RickAndMorty.Tests.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMortyTests/RickAndMorty.Tests.csproj
@@ -58,9 +58,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Repositories\Repositories.csproj">
+    <ProjectReference Include="..\RickAndMorty.Services\RickAndMorty.Services.csproj">
       <Project>{969e7df8-bbd1-4a04-8c0e-975443dae57d}</Project>
-      <Name>Repositories</Name>
+      <Name>RickAndMorty.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
