try to quickly rebuild this stuff

--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Contracts/RickAndMorty.Contracts.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Contracts/RickAndMorty.Contracts.csproj
@@ -41,10 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICharacter.cs" />
+    <Compile Include="IConfigurationService.cs" />
     <Compile Include="IEpisode.cs" />
     <Compile Include="ILocation.cs" />
-    <Compile Include="IOrigin.cs" />
-    <Compile Include="IRickAndMortyRepo.cs" />
+    <Compile Include="IDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
