--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Services/RickAndMorty.Services.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Services/RickAndMorty.Services.csproj
@@ -30,10 +30,23 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Conventions, Version=3.3.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.Extensions.Conventions.3.3.0\lib\net45\Ninject.Extensions.Conventions.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Extensions.Factory, Version=3.3.2.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.Extensions.Factory.3.3.2\lib\net45\Ninject.Extensions.Factory.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http.WebRequest" />
@@ -45,19 +58,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\Character.cs" />
-    <Compile Include="API\Episode.cs" />
-    <Compile Include="API\Info.cs" />
-    <Compile Include="API\Location.cs" />
-    <Compile Include="API\Origin.cs" />
-    <Compile Include="API\Resources.cs" />
-    <Compile Include="API\Results.cs" />
-    <Compile Include="API\RickAndMorty_APIClient.cs" />
+    <Compile Include="Configuration\ConfigurationService.cs" />
+    <Compile Include="Data\Models\Character.cs" />
+    <Compile Include="Data\Models\Episode.cs" />
+    <Compile Include="Data\Models\Info.cs" />
+    <Compile Include="Data\Models\Location.cs" />
+    <Compile Include="Data\Models\Origin.cs" />
+    <Compile Include="Data\Models\Resources.cs" />
+    <Compile Include="Data\Models\Results.cs" />
+    <Compile Include="Data\API\Client\RickAndMortyDataService_API_Client.cs" />
+    <Compile Include="Data\Mock\Client\RickAndMortyDataService_Mock_Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="API\RickAndMortyRepo_API.cs" />
-    <Compile Include="Mock\RickAndMortyRepo_Mock.cs" />
+    <Compile Include="Data\API\RickAndMortyDataService_API.cs" />
+    <Compile Include="Data\Mock\RickAndMortyDataService_Mock.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Data\Mock\Client\characters.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Mock\Client\episodes.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Data\Mock\Client\locations.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -70,5 +95,6 @@
       <Name>RickAndMorty.Implementations</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
