--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Services/RickAndMorty.Services.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Services/RickAndMorty.Services.csproj
@@ -69,8 +69,9 @@
     <Compile Include="Data\API\Client\RickAndMortyDataService_API_Client.cs" />
     <Compile Include="Data\Mock\Client\RickAndMortyDataService_Mock_Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\API\RickAndMortyDataService_API.cs" />
+    <Compile Include="Data\API\RickAndMortyDataService_Api.cs" />
     <Compile Include="Data\Mock\RickAndMortyDataService_Mock.cs" />
+    <Compile Include="RickAndMortyDataServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
