add query parser and start evaluator

--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Contracts/RickAndMorty.Contracts.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Contracts/RickAndMorty.Contracts.csproj
@@ -45,6 +45,8 @@
     <Compile Include="IEpisode.cs" />
     <Compile Include="ILocation.cs" />
     <Compile Include="IDataService.cs" />
+    <Compile Include="IQueryEvaluator.cs" />
+    <Compile Include="IQueryParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
