--- a/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Engines/RickAndMorty.Engines.csproj
+++ b/Using DI and IOC - Mocking and Testing/RickAndMorty_NetFramework/RickAndMorty.Engines/RickAndMorty.Engines.csproj
@@ -54,6 +54,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryEvaluator.cs" />
+    <Compile Include="QueryParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RickAndMorty.Contracts\RickAndMorty.Contracts.csproj">
